Fix product card style on firefox

--- a/src/components/ProductCard/styles.scss
+++ b/src/components/ProductCard/styles.scss
@@ -55,8 +55,12 @@
 
         input[type='number']::-webkit-inner-spin-button, 
         input[type='number']::-webkit-outer-spin-button { 
-            -webkit-appearance: none;
+            -webkit-appearance: none !important;
             margin: 0;
+        }
+
+        input[type=number] {
+            -moz-appearance:textfield;
         }
 
         span {
